--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- New Slider for Max Fast Lap Time -->
         <div class="input-group slider-group">
             <label for="maxFastLapSlider">Max Fast Lap Time:</label>
-            <input type="range" id="maxFastLapSlider" min="10" max="180" value="60" step="1">
+            <input type="range" id="maxFastLapSlider" min="10" max="180" value="60" step="0.1"> <!-- VERANDERD: step="0.1" -->
             <span id="maxFastLapValue">1:00.000</span>
         </div>
 
