--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
         <div id="loading" class="hidden">Loading...</div>
         <div id="error" class="hidden error-message"></div>
 
-        <!-- New Slider for Max Fast Lap Time -->
-        <div class="input-group slider-group">
-            <label for="maxFastLapSlider">Max Fast Lap Time:</label>
-            <input type="range" id="maxFastLapSlider" min="10" max="180" value="60" step="0.1"> <!-- VERANDERD: step="0.1" -->
-            <span id="maxFastLapValue">1:00.000</span>
-        </div>
-
         <div id="activitiesList" class="hidden">
             <h2>Recent Activities:</h2>
             <select id="activitySelect">
@@ -40,6 +33,16 @@
         <div id="lapsData" class="hidden">
             <h2>Laps Data:</h2>
             <pre id="lapsOutput"></pre>
+
+            <!-- VERPLAATST: Slider en Text Input voor Max Fast Lap Time -->
+            <!-- Deze div krijgt nu dynamisch de 'hidden' class toegewezen/verwijderd -->
+            <div id="maxFastLapControls" class="input-group slider-group">
+                <label for="maxFastLapInput">Max Fast Lap Time:</label>
+                <input type="range" id="maxFastLapSlider" min="10" max="180" value="60" step="0.1">
+                <input type="text" id="maxFastLapInput" value="1:00.000" placeholder="MM:SS.ms or SS.ms">
+                <span id="maxFastLapValueError" class="error-message hidden">Invalid time format</span>
+            </div>
+
             <div class="chart-container">
                 <canvas id="lapTimeChart"></canvas>
             </div>
