update website with avatar logo and no chart animations

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <datalist id="transponder-list"></datalist>
         </div>
 
+        <div id="profile-info" class="hidden" style="display: none;">
+            <img id="profile-avatar" src="" alt="User Avatar">
+            <div class="profile-details">
+                <span id="profile-name"></span>
+                <span id="profile-nickname"></span>
+            </div>
+        </div>
+
         <div id="loading" class="hidden">Loading...</div>
         <div id="error" class="hidden error-message"></div>
 
