--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <input type="range" id="maxFastLapSlider" min="10" max="180" value="60" step="0.1">
                 <input type="text" id="maxFastLapInput" value="1:00.000" placeholder="MM:SS.ms or SS.ms">
                 <span id="maxFastLapValueError" class="error-message hidden">Invalid time format</span>
+                <button id="toggleLapsBtn">Show Speed Laps</button>
             </div>
             <div class="chart-container" id="mainChartContainer">
                 <canvas id="mainLapChart"></canvas>
