added new file for the overlapping sessions

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <script src="gpx-generator.js"></script>
     <script src="api.js"></script>
     <script src="chart-factory.js"></script>
+    <script src="fetch_overlapping_sessions.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
